s/5179 hotel detail polish - disable exapnded room click. - add padding on top and bottom of expanded rooms. - different padding for different toggle button states. - room image bottom corners not round.

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -2812,7 +2812,8 @@
     <string name="not_included_in_the_price">Not included in the price</string>
     <!-- View Room button text -->
     <string name="view_room_button_text">View Room</string>
-
+    <!-- Book Room button text -->
+    <string name="book_room_button_text">Book</string>
     <!-- Share via when user is shareing hotel listing -->
     <string name="share_via">Share via</string>
     <!-- Renovation Notice -->
